2022-01-18 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve dry_run_cost accuracy.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Refactor dry_run_cost computation.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Improve debug messages.

2022-01-17 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Make opcode output more consistent.

2022-01-16 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Correct dry_run_cost for several code paths.

2022-01-16 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Disable verbose debugging in the generated assembly.

2022-01-15 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Imporve preparePointer.

2022-01-15 Benedikt Freisen <b.freisen AT gmx.net>

	* device/lib/_fs2ulong.c,
	  device/lib/_ulong2fs.c,
	  support/regression/tests/bug-3276.c:
	  Fix bug #3276.

2022-01-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-3129.c: partial fix for bug #3309

2022-01-15 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Disable failing test for DS390 port.
    * sdcc/support/regression/tests/bug-3129.c:
      Disable failing test for MOS6502 port.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Imporve genAddrOf.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-981001-1 regression failure.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c,
      sdcc/device/lib/mos6502/crt0.s:
      Remove use of BASEPTR.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Let storeConstToAop use X and Y as well.

2022-01-14 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/ralloc.h,
      sdcc/src/mos6502/gen.c: